# yt-dlp-to-ffmpeg

./: .gitignore  Cargo.toml  LICENSE-MIT
.devcontainer/: devcontainer.json  onStart.sh
src/: consts.rs  funcs.rs  init.rs  main.rs  main_functions.rs  parser.rs  statics.rs
src/auths/: gdrive.rs
src/ext_functions/: gdrive.rs  mod.rs
src/funcs/: ffmpeg.rs  ffprobe.rs  md5.rs  mod.rs  opendal.rs  progressbar.rs
src/init/: db.rs  progressbar_logwriter.rs
src/main_funcs/: handle_directdl.rs  handle_ytp.rs  mod.rs
src/services/: mod.rs
src/services/dropbox/: auth.rs  downloader.rs  handler.rs  list_folder_iter.rs  mod.rs  test.rs  walker.rs
src/services/google_drive/: auth.rs  download.rs  list_files.rs  mod.rs  node.rs  save_body_to_file.rs
src/services/google_drive/common/: mod.rs
src/structs/: md5writer.rs  mod.rs
