[package]
name = "yt-dlp-to-ffmpeg"
version = "0.1.0"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
clap-stdin = "0.6.0"
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
content_disposition = "0.4.0"
ffmpeg-sidecar = "2.0.5"
ffprobe = "0.4.0"
indicatif = "0.17.9"
nom = "7.1.3"
opendal = { version = "0.51.0", default-features = false, features = ["layers-blocking", "services-b2"] }
reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls"], default-features = false }
sanitize-filename = "0.6.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# youtube_dl = { path = "ext_lib/youtube-dl-rs" }
youtube_dl = "0.10"

[profile.dev.package.backtrace]
opt-level = 3

[workspace]
members = [".", "./ext_lib/youtube-dl-rs"]
