[package]
name = "yt-dlp-to-ffmpeg"
version = "0.1.0"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2.4"
async-recursion = "1.1.1"
clap = { version = "^4.5", features = ["derive"] }
clap-stdin = "0.6.0"
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
content_disposition = "0.4.0"
directories = "6.0.0"
ffmpeg-sidecar = "2.0.5"
ffprobe = "0.4.0"
futures-util = "0.3.31"
google-drive3 = "6.0.0"
http-body-util = "0.1.3"
indicatif = { version = "0.17.9", features = ["tokio"] }
md5 = "0.7.0"
mime = "0.3.17"
nom = "7.1.3"
opendal = { version = "0.51.0", default-features = false, features = ["layers-blocking", "services-b2"] }
reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls"], default-features = false }
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# youtube_dl = { path = "ext_lib/youtube-dl-rs" }
youtube_dl = "0.10"

[profile.dev.package.backtrace]
opt-level = 3

[workspace]
members = [".", "./ext_lib/youtube-dl-rs"]
